# routes/temple.js
@@ -1,9 +1,0 @@
-const routes = require('express').Router();
-const temples = require('../controllers/temple.js');
-
-routes.get('/', temples.findAll);
-routes.get('/:temple_id', temples.findOne);
-
-routes.post('/', temples.create);
-
-module.exports = routes;
